# cmake-sdl3-starter

./: .gitignore  CMakeLists.txt  README.md  build_and_run_bash.sh  build_and_run_windows.bat
src/: main.cpp
